--- a/Workflow/wg_prior_genome.ipynb
+++ b/Workflow/wg_prior_genome.ipynb
@@ -137,12 +137,32 @@
     "-J 10 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
     "\n",
     "\n",
-    "nohup sos run ~/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb mm_prior \\\n",
+    "nohup sos run /home/hs3163/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb mm_prior \\\n",
     "--molecular_pheno_dir /home/hs3163/Project/Genome_prior/data/molc_dir    \\\n",
     "--rds_list /home/hs3163/Project/Genome_prior/data/rds_list_test  \\\n",
     "--wd   /home/hs3163/Project/Genome_prior/test \\\n",
     "--name \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
-    "--container /mnt/mfs/statgen/containers/twas_latest.sif -s build &"
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif -s build &\n",
+    "\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb mm_prior \\\n",
+    "--molecular_pheno_dir /home/hs3163/Project/Genome_prior/data/molc_dir    \\\n",
+    "--rds_list /home/hs3163/Project/Genome_prior/data/rds_list  \\\n",
+    "--wd   /home/hs3163/Project/Genome_prior/merge \\\n",
+    "--name \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "--constraint \"Both\" \\\n",
+    "-J 10 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb mm_prior \\\n",
+    "--molecular_pheno_dir /home/hs3163/Project/Genome_prior/data/molc_dir    \\\n",
+    "--rds_list /home/hs3163/Project/Genome_prior/data/rds_list  \\\n",
+    "--wd   /home/hs3163/Project/Genome_prior/merge \\\n",
+    "--name \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "--constraint \"No_Constraint\" \\\n",
+    "-J 10 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "\n"
    ]
   },
   {
@@ -191,6 +211,10 @@
     "parameter: name = str\n",
     "# handle N = per_chunk data-set in one job\n",
     "parameter: per_chunk = 1000\n",
+    "# Exchangable effect (beta) (EE) or exchangable z-scores (standardize beta ) (EZ)\n",
+    "parameter: effect_model = 'EZ'\n",
+    "# Whether run flash with constriant or not,default both, ('Constraint', 'No_Constraint' , 'Both')\n",
+    "parameter: constraint = 'Both'\n",
     "\n",
     "\n",
     "import glob\n",
@@ -246,13 +270,13 @@
     "                      \n",
     "    # Join first two tissues\n",
     "    genos_join_bhat = full_join((genos%>%pull(bhat))[[1]],(genos%>%pull(bhat))[[2]],by = \"rowname\")\n",
-    "    genos_join_sbhat = full_join((genos%>%pull(sbhat))[[1]],(genos%>%pull(bhat))[[2]],by = \"rowname\")\n",
+    "    genos_join_sbhat = full_join((genos%>%pull(sbhat))[[1]],(genos%>%pull(sbhat))[[2]],by = \"rowname\")\n",
     "    \n",
     "    # If there are more tissues, join the rest\n",
     "    if(n > 2){\n",
     "    for(j in 3:n){\n",
     "    genos_join_bhat = full_join(genos_join_bhat,(genos%>%pull(bhat))[[j]],by = \"rowname\")%>%select(-rowname)%>%as.matrix\n",
-    "    genos_join_sbhat = full_join(genos_join_sbhat,(genos%>%pull(bhat))[[j]],by = \"rowname\")%>%select(-rowname)%>%as.matrix\n",
+    "    genos_join_sbhat = full_join(genos_join_sbhat,(genos%>%pull(sbhat))[[j]],by = \"rowname\")%>%select(-rowname)%>%as.matrix\n",
     "    }\n",
     "    }\n",
     "    \n",
@@ -392,8 +416,8 @@
     "parameter: n_random = 4\n",
     "parameter: n_null = 4\n",
     "\n",
-    "input: glob.glob(f'{datadir:a}/*.rds'), group_by = per_chunk\n",
-    "output: f\"{wd:a}/cache/{name}_{_index+1}.rds\"\n",
+    "input: glob.glob(f'{wd:a}/input/*.rds'), group_by = per_chunk\n",
+    "output: f'{wd:a}/cache/{name}_{_index+1}.rds'\n",
     "\n",
     "task: trunk_workers = 1, walltime = '1h', trunk_size = 1, mem = '4G', cores = 1, tags = f'{_output:bn}'\n",
     "R: expand = \"${ }\"\n",
@@ -458,7 +482,7 @@
    "source": [
     "[mm_prior_3,extract_2]\n",
     "input: group_by = \"all\"\n",
-    "output: f\"{wd:a}/output/{name}.rds\"\n",
+    "output: f'{wd:a}/output/{name}.rds'\n",
     "task: trunk_workers = 1, walltime = '1h', trunk_size = 1, mem = '6G', cores = 1, tags = f'{_output:bn}'\n",
     "R: expand = \"${ }\"\n",
     "    merge_data = function(res, one_data) {\n",
@@ -508,15 +532,22 @@
      ]
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Perform FLASH analysis (time estimate: 20min)\n",
     "[mm_prior_4,flash]\n",
     "# default method for convex optimization\n",
     "parameter: optmethod = \"mixSQP\"\n",
     "parameter: flash_optmethod = \"mixSQP\"\n",
-    "# ?Exchangable effect (EE) or exchangable z-scores (EZ)\n",
-    "parameter: effect_model = 'EE'\n",
-    "output: f\"{wd:a}/output/{name}.EE.flash.rds\"\n",
+    "\n",
+    "input: f'{wd:a}/output/{name}.rds'\n",
+    "output: f'{wd:a}/output/{name}.{effect_model}.{constraint}.flash.rds'\n",
     "\n",
     "task: trunk_workers = 1, walltime = '2h', trunk_size = 1, mem = '4G', cores = 1, tags = f'{_output:bn}'\n",
     "R: expand = \"${ }\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
@@ -563,6 +594,16 @@
     "      return(fl_b)\n",
     "    }\n",
     "\n",
+    "    r1cov=function(x){x %*% t(x)}\n",
+    "    cov_from_factors = function(f, name){\n",
+    "       Ulist = list()\n",
+    "       for(i in 1:nrow(f)){\n",
+    "         Ulist = c(Ulist,list(r1cov(f[i,])))\n",
+    "       }\n",
+    "       names(Ulist) = paste0(name,\"_\",(1:nrow(f)))\n",
+    "       return(Ulist)\n",
+    "     }\n",
+    "\n",
     "    cov_flash = function(data, subset = NULL, non_singleton = FALSE, save_model = NULL) {\n",
     "      if(is.null(subset)) subset = 1:mashr:::n_effects(data)\n",
     "      b.center = apply(data$Bhat[subset,], 2, function(x) x - mean(x))\n",
@@ -590,10 +631,24 @@
     "      return(U.flash)\n",
     "    }\n",
     "    ##\n",
-    "    dat = readRDS(${_input:r})\n",
+    "    dat = readRDS(\"${_input}\")\n",
+    "    if(\"${constraint}\" == \"Both\" |\"${constraint}\" == \"No_Constraint\" ){\n",
+    "    f.d = flash_set_data(as.matrix(dat$strong.z))\n",
+    "    f = flash(f.d, greedy=TRUE, backfit = T)\n",
+    "    }\n",
+    "                       \n",
+    "    if(\"${constraint}\" == \"Both\"){\n",
     "    dat = mash_set_data(dat$strong.b, dat$strong.s, alpha=${1 if effect_model == 'EZ' else 0}, zero_Bhat_Shat_reset = 1E3)\n",
-    "    res = cov_flash(dat, non_singleton = TRUE, save_model = \"${_output:n}.model.rds\")\n",
-    "    saveRDS(res, ${_output:r})"
+    "    res = cov_flash(dat, non_singleton = TRUE, save_model = \"${_output}.model.rds\")\n",
+    "    res = c(res,mashr:::cov_from_factors(t(as.matrix(f$ldf$f)), \"FLASH_NC\"),\n",
+    "                list(\"tFLASH_NC\" = t(f$fitted_values) %*% f$fitted_values / nrow(f$fitted_values)))                                                     \n",
+    "    }else if ( \"${constraint}\" == \"Constraint\" ){\n",
+    "    res = cov_flash(dat, non_singleton = TRUE, save_model = \"${_output}.model.rds\")\n",
+    "    }else{\n",
+    "    res = c(mashr:::cov_from_factors(t(as.matrix(f$ldf$f)), \"FLASH_NC\"),\n",
+    "                list(\"tFLASH_NC\" = t(f$fitted_values) %*% f$fitted_values / nrow(f$fitted_values))) \n",
+    "    }                                                      \n",
+    "    saveRDS(res, \"${_output}\")"
    ]
   },
   {
@@ -609,16 +664,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute data-driven / canonical prior matrices (time estimate: 2h ~ 12h for ~30 49 by 49 matrix mixture)\n",
-    "[mm_prior_5,mash_ed_1, mash_teem_1, udr_ed_1]\n",
+    "[mm_prior_5,mash_ed_1, udr_ed_1]\n",
     "parameter: npc = 3\n",
-    "# default method for convex optimization\n",
-    "parameter: optmethod = \"mixSQP\"\n",
-    "parameter: flash_optmethod = \"mixSQP\"\n",
-    "# ?Exchangable effect (EE) or exchangable z-scores (EZ)\n",
-    "parameter: effect_model = 'EE'\n",
-    "input: output_from('mm_prior_3'), output_from('flash')\n",
-    "output: f\"{wd:a}/output/{name}.FL_PC{npc}.rds\"\n",
+    "input:  f'{wd:a}/output/{name}.rds', f'{wd:a}/output/{name}.{effect_model}.{constraint}.flash.rds'\n",
+    "output: f'{_input[1]:n}.FL_PC{npc}.rds'\n",
     "\n",
     "task: trunk_workers = 1, walltime = '36h', trunk_size = 1, mem = '8G', cores = 4, tags = f'{_output:bn}'\n",
     "R: expand = \"${ }\", stderr = f\"{_output:n}.stderr\", stdout = f\"{_output:n}.stdout\",container = container\n",
@@ -651,6 +700,27 @@
     "    res = mashr:::bovy_wrapper(dat$mash_data, dat$Ulist, logfile=${_output:nr}, tol = 1e-06)\n",
     "    # format to input for simulation with DSC (current pipeline)\n",
     "    saveRDS(list(U=res$Ulist, w=res$pi, loglik=scan(\"${_output:nn}.ED_loglike.log\")), ${_output:r}) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[mm_prior_7,udr_ed_2]\n",
+    "input:  output_from('udr_ed_1')\n",
+    "output: f\"{_input:n}.UD_ED.rds\"\n",
+    "task: trunk_workers = 1, walltime = '36h', trunk_size = 1, mem = '8G', cores = 14, tags = f'{_output:bn}'\n",
+    "R: expand = \"${ }\", stderr = f\"{_output:n}.stderr\", stdout = f\"{_output:n}.stdout\",container = container\n",
+    "    library(udr) # udr commit 5265079 with changes to set lower bound on the eigenvalues\n",
+    "    dat = readRDS(${_input:r})\n",
+    "    # Denoised data-driven matrices\n",
+    "    f0 = ud_init(X = as.matrix(dat$data), V = dat$S, U_scaled = list(), U_unconstrained = dat$Ulist, n_rank1=0)\n",
+    "    res = ud_fit(f0, control = list(unconstrained.update = \"ed\", resid.update = 'none', maxiter=5000),\n",
+    "    verbose=FALSE)\n",
+    "    # format to input for simulation with DSC (current pipeline)\n",
+    "    saveRDS(list(U=res$U, w=res$w, loglik=res$loglik), ${_output:r})"
    ]
   }
  ],
