flash step init_fn fixed

--- a/Workflow/wg_prior_genome.ipynb
+++ b/Workflow/wg_prior_genome.ipynb
@@ -6,7 +6,7 @@
     "kernel": "SoS"
    },
    "source": [
-    "# TWAS multivariate susie\n",
+    "# Whole genome prior computation\n",
     "\n",
     "This notebook implements a TWAS analysis workflow using multivariate susie."
    ]
@@ -137,11 +137,12 @@
     "-J 10 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
     "\n",
     "\n",
-    "nohup sos run /home/hs3163/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb mm_prior \\\n",
+    "nohup sos run /home/hs3163/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb flash \\\n",
     "--molecular_pheno_dir /home/hs3163/Project/Genome_prior/data/molc_dir    \\\n",
     "--rds_list /home/hs3163/Project/Genome_prior/data/rds_list_test  \\\n",
     "--wd   /home/hs3163/Project/Genome_prior/test \\\n",
     "--name \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--constraint \"Both\" \\\n",
     "--container /mnt/mfs/statgen/containers/twas_latest.sif -s build &\n",
     "\n",
     "\n",
@@ -564,7 +565,7 @@
     "      return(ret)\n",
     "    }\n",
     "\n",
-    "    flash_pipeline = function(data, ...) {\n",
+    "    flash_pipeline = function(data,init_fn = \"my_init_fn\", ...) {\n",
     "      ## current state-of-the art\n",
     "      ## suggested by Jason Willwerscheid\n",
     "      ## cf: discussion section of\n",
@@ -579,7 +580,7 @@
     "                    var_type = \"constant\",\n",
     "                    ebnm_fn = ebnm_fn,\n",
     "                    ebnm_param = ebnm_param,\n",
-    "                    init_fn = \"my_init_fn\",\n",
+    "                    init_fn = init_fn,\n",
     "                    stopping_rule = \"factors\",\n",
     "                    tol = 1e-3,\n",
     "                    verbose_output = \"odF\")\n",
@@ -634,11 +635,10 @@
     "    dat = readRDS(\"${_input}\")\n",
     "    if(\"${constraint}\" == \"Both\" |\"${constraint}\" == \"No_Constraint\" ){\n",
     "    f.d = flash_set_data(as.matrix(dat$strong.z))\n",
-    "    f = flash(f.d, greedy=TRUE, backfit = T)\n",
-    "    }\n",
-    "                       \n",
+    "    f = flash_pipeline(f.d,init_fn = \"udv_si\")\n",
+    "    }              \n",
     "    if(\"${constraint}\" == \"Both\"){\n",
-    "    dat = mash_set_data(dat$strong.b, dat$strong.s, alpha=${1 if effect_model == 'EZ' else 0}, zero_Bhat_Shat_reset = 1E3)\n",
+    "    dat = mash_set_data(dat$strong.b, dat$strong.s, alpha= ${1 if effect_model == 'EZ' else 0}, zero_Bhat_Shat_reset = 1E3)\n",
     "    res = cov_flash(dat, non_singleton = TRUE, save_model = \"${_output}.model.rds\")\n",
     "    res = c(res,mashr:::cov_from_factors(t(as.matrix(f$ldf$f)), \"FLASH_NC\"),\n",
     "                list(\"tFLASH_NC\" = t(f$fitted_values) %*% f$fitted_values / nrow(f$fitted_values)))                                                     \n",
@@ -664,7 +664,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[mm_prior_5,mash_ed_1, udr_ed_1]\n",
+    "[mm_prior_5,mash_ed_1, udr_ed_1,teem_ed_1,ed_1]\n",
     "parameter: npc = 3\n",
     "input:  f'{wd:a}/output/{name}.rds', f'{wd:a}/output/{name}.{effect_model}.{constraint}.flash.rds'\n",
     "output: f'{_input[1]:n}.FL_PC{npc}.rds'\n",
@@ -673,16 +673,23 @@
     "R: expand = \"${ }\", stderr = f\"{_output:n}.stderr\", stdout = f\"{_output:n}.stdout\",container = container\n",
     "    library(mashr)\n",
     "    dat = readRDS(${_input[0]:r})\n",
-    "    vhat = estimate_null_correlation_simple(mash_set_data(dat$random.b, Shat=dat$random.s, zero_Bhat_Shat_reset = 1E3))\n",
-    "    mash_data = mash_set_data(dat$strong.b, Shat=dat$strong.s, alpha=0, V=vhat, zero_Bhat_Shat_reset = 1E3)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "    V = cor(dat$null.z)\n",
+    "    X = dat$strong.z\n",
+    "    mash_data = mash_set_data(X = dat$strong.b, Shat=dat$strong.s, alpha=1, V=vhat, zero_Bhat_Shat_reset = 1E3)\n",
+    "    \n",
+    "        \n",
     "    # FLASH matrices\n",
     "    U.flash = readRDS(${_input[1]:r})\n",
     "    # SVD matrices\n",
     "    U.pca = ${\"cov_pca(mash_data, %s)\" % npc if npc > 0 else \"list()\"}\n",
     "    # Emperical cov matrix\n",
-    "    X.center = apply(mash_data$Bhat, 2, function(x) x - mean(x))\n",
+    "    X.center = apply(X, 2, function(x) x - mean(x))\n",
     "    Ulist = c(U.flash, U.pca, list(\"XX\" = t(X.center) %*% X.center / nrow(X.center)))\n",
-    "    saveRDS(list(mash_data = mash_data, Ulist = Ulist), ${_output:r})"
+    "    saveRDS(list(mash_data = mash_data, Ulist = Ulist,X = X, V = V), ${_output:r})"
    ]
   },
   {
@@ -691,7 +698,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[mm_prior_6,mash_ed_2]\n",
+    "[mash_ed_2,ed_2]\n",
     "output: f\"{_input:n}.ED.rds\"\n",
     "task: trunk_workers = 1, walltime = '36h', trunk_size = 1, mem = '8G', cores = 14, tags = f'{_output:bn}'\n",
     "R: expand = \"${ }\", stderr = f\"{_output:n}.stderr\", stdout = f\"{_output:n}.stdout\",container = container\n",
@@ -708,7 +715,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[mm_prior_7,udr_ed_2]\n",
+    "[mm_prior_6,udr_ed_2,ed_3]\n",
     "input:  output_from('udr_ed_1')\n",
     "output: f\"{_input:n}.UD_ED.rds\"\n",
     "task: trunk_workers = 1, walltime = '36h', trunk_size = 1, mem = '8G', cores = 14, tags = f'{_output:bn}'\n",
@@ -716,8 +723,30 @@
     "    library(udr) # udr commit 5265079 with changes to set lower bound on the eigenvalues\n",
     "    dat = readRDS(${_input:r})\n",
     "    # Denoised data-driven matrices\n",
-    "    f0 = ud_init(X = as.matrix(dat$data), V = dat$S, U_scaled = list(), U_unconstrained = dat$Ulist, n_rank1=0)\n",
+    "    f0 = ud_init(X = dat$X, V = dat$V, U_scaled = list(), U_unconstrained = dat$Ulist, n_rank1=0)\n",
     "    res = ud_fit(f0, control = list(unconstrained.update = \"ed\", resid.update = 'none', maxiter=5000),\n",
+    "    verbose=FALSE)\n",
+    "    # format to input for simulation with DSC (current pipeline)\n",
+    "    saveRDS(list(U=res$U, w=res$w, loglik=res$loglik), ${_output:r})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[mm_prior_7,teem_ed_2,ed_3]\n",
+    "method = [\"ed\",\"teem\"]\n",
+    "input:  output_from('udr_ed_1'),for_each = \"method\"\n",
+    "output: f\"{_input:n}.UD_ED.rds\"\n",
+    "task: trunk_workers = 1, walltime = '36h', trunk_size = 1, mem = '8G', cores = 14, tags = f'{_output:bn}'\n",
+    "R: expand = \"${ }\", stderr = f\"{_output:n}.stderr\", stdout = f\"{_output:n}.stdout\",container = container\n",
+    "    library(udr) # udr commit 5265079 with changes to set lower bound on the eigenvalues\n",
+    "    dat = readRDS(${_input:r})\n",
+    "    # Denoised data-driven matrices\n",
+    "    f0 = ud_init(X = dat$X, V = dat$V, U_scaled = list(), U_unconstrained = dat$Ulist, n_rank1=0)\n",
+    "    res = ud_fit(f0, control = list(unconstrained.update = \"{_methods}\", resid.update = 'none', maxiter=5000),\n",
     "    verbose=FALSE)\n",
     "    # format to input for simulation with DSC (current pipeline)\n",
     "    saveRDS(list(U=res$U, w=res$w, loglik=res$loglik), ${_output:r})"
