--- a/Workflow/wg_prior_genome.ipynb
+++ b/Workflow/wg_prior_genome.ipynb
@@ -212,8 +212,8 @@
     "parameter: name = str\n",
     "# handle N = per_chunk data-set in one job\n",
     "parameter: per_chunk = 1000\n",
-    "# Exchangable effect (beta) (EE) or exchangable z-scores (standardize beta ) (EZ)\n",
-    "parameter: effect_model = 'EZ'\n",
+    "\n",
+    "\n",
     "# Whether run flash with constriant or not,default both, ('Constraint', 'No_Constraint' , 'Both')\n",
     "parameter: constraint = 'Both'\n",
     "\n",
@@ -548,7 +548,7 @@
     "parameter: flash_optmethod = \"mixSQP\"\n",
     "\n",
     "input: f'{wd:a}/output/{name}.rds'\n",
-    "output: f'{wd:a}/output/{name}.{effect_model}.{constraint}.flash.rds'\n",
+    "output: f'{wd:a}/output/{name}.{constraint}.flash.rds'\n",
     "\n",
     "task: trunk_workers = 1, walltime = '2h', trunk_size = 1, mem = '4G', cores = 1, tags = f'{_output:bn}'\n",
     "R: expand = \"${ }\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
@@ -605,6 +605,7 @@
     "       return(Ulist)\n",
     "     }\n",
     "\n",
+    "    ## HS, is this function consistant with the ez model? \n",
     "    cov_flash = function(data, subset = NULL, non_singleton = FALSE, save_model = NULL) {\n",
     "      if(is.null(subset)) subset = 1:mashr:::n_effects(data)\n",
     "      b.center = apply(data$Bhat[subset,], 2, function(x) x - mean(x))\n",
@@ -638,7 +639,7 @@
     "    f = flash_pipeline(f.d,init_fn = \"udv_si\")\n",
     "    }              \n",
     "    if(\"${constraint}\" == \"Both\"){\n",
-    "    dat = mash_set_data(dat$strong.b, dat$strong.s, alpha= ${1 if effect_model == 'EZ' else 0}, zero_Bhat_Shat_reset = 1E3)\n",
+    "    dat = mash_set_data(dat$strong.b, dat$strong.s, alpha= 1, zero_Bhat_Shat_reset = 1E3)\n",
     "    res = cov_flash(dat, non_singleton = TRUE, save_model = \"${_output}.model.rds\")\n",
     "    res = c(res,mashr:::cov_from_factors(t(as.matrix(f$ldf$f)), \"FLASH_NC\"),\n",
     "                list(\"tFLASH_NC\" = t(f$fitted_values) %*% f$fitted_values / nrow(f$fitted_values)))                                                     \n",
@@ -666,22 +667,16 @@
    "source": [
     "[mm_prior_5,mash_ed_1, udr_ed_1,teem_ed_1,ed_1]\n",
     "parameter: npc = 3\n",
-    "input:  f'{wd:a}/output/{name}.rds', f'{wd:a}/output/{name}.{effect_model}.{constraint}.flash.rds'\n",
+    "input:  f'{wd:a}/output/{name}.rds', f'{wd:a}/output/{name}.{constraint}.flash.rds'\n",
     "output: f'{_input[1]:n}.FL_PC{npc}.rds'\n",
     "\n",
     "task: trunk_workers = 1, walltime = '36h', trunk_size = 1, mem = '8G', cores = 4, tags = f'{_output:bn}'\n",
     "R: expand = \"${ }\", stderr = f\"{_output:n}.stderr\", stdout = f\"{_output:n}.stdout\",container = container\n",
     "    library(mashr)\n",
     "    dat = readRDS(${_input[0]:r})\n",
-    "\n",
-    "    \n",
-    "\n",
-    "\n",
     "    V = cor(dat$null.z)\n",
     "    X = dat$strong.z\n",
     "    mash_data = mash_set_data(X = dat$strong.b, Shat=dat$strong.s, alpha=1, V=vhat, zero_Bhat_Shat_reset = 1E3)\n",
-    "    \n",
-    "        \n",
     "    # FLASH matrices\n",
     "    U.flash = readRDS(${_input[1]:r})\n",
     "    # SVD matrices\n",
@@ -698,7 +693,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[mash_ed_2,ed_2]\n",
+    "[mash_ed_2]\n",
+    "input:  output_from('mash_ed_1')\n",
     "output: f\"{_input:n}.ED.rds\"\n",
     "task: trunk_workers = 1, walltime = '36h', trunk_size = 1, mem = '8G', cores = 14, tags = f'{_output:bn}'\n",
     "R: expand = \"${ }\", stderr = f\"{_output:n}.stderr\", stdout = f\"{_output:n}.stdout\",container = container\n",
@@ -715,7 +711,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[mm_prior_6,udr_ed_2,ed_3]\n",
+    "[udr_ed_2]\n",
     "input:  output_from('udr_ed_1')\n",
     "output: f\"{_input:n}.UD_ED.rds\"\n",
     "task: trunk_workers = 1, walltime = '36h', trunk_size = 1, mem = '8G', cores = 14, tags = f'{_output:bn}'\n",
@@ -739,14 +735,14 @@
     "[mm_prior_7,teem_ed_2,ed_3]\n",
     "method = [\"ed\",\"teem\"]\n",
     "input:  output_from('udr_ed_1'),for_each = \"method\"\n",
-    "output: f\"{_input:n}.UD_ED.rds\"\n",
+    "output: f\"{_input:n}.{_method}.UD_ED.rds\"\n",
     "task: trunk_workers = 1, walltime = '36h', trunk_size = 1, mem = '8G', cores = 14, tags = f'{_output:bn}'\n",
     "R: expand = \"${ }\", stderr = f\"{_output:n}.stderr\", stdout = f\"{_output:n}.stdout\",container = container\n",
     "    library(udr) # udr commit 5265079 with changes to set lower bound on the eigenvalues\n",
     "    dat = readRDS(${_input:r})\n",
     "    # Denoised data-driven matrices\n",
     "    f0 = ud_init(X = dat$X, V = dat$V, U_scaled = list(), U_unconstrained = dat$Ulist, n_rank1=0)\n",
-    "    res = ud_fit(f0, control = list(unconstrained.update = \"{_methods}\", resid.update = 'none', maxiter=5000),\n",
+    "    res = ud_fit(f0, control = list(unconstrained.update = \"${_method}\", resid.update = 'none', maxiter=5000),\n",
     "    verbose=FALSE)\n",
     "    # format to input for simulation with DSC (current pipeline)\n",
     "    saveRDS(list(U=res$U, w=res$w, loglik=res$loglik), ${_output:r})"
