--- a/Workflow/wg_prior_genome.ipynb
+++ b/Workflow/wg_prior_genome.ipynb
@@ -109,35 +109,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "kernel": "Bash"
    },
    "outputs": [
     {
-     "ename": "ParsingError",
-     "evalue": "File contains parsing errors: \n\t[line  2]: sos run ./mv_susie.ipynb mv_susie_cv --cv_times 2  \\\n--molecular_pheno_dir \"molecular_phenotype_list\"   \\\n--region_list region_list  \\\n--wd ./   \\\n--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE &\n\nInvalid statements: SyntaxError('invalid syntax', ('<string>', 1, 5, 'sos run ./mv_susie.ipynb mv_susie_cv --cv_times 2  \\\\\\n'))",
-     "execution_count": 2,
+     "ename": "ERROR",
+     "evalue": "Error in parse(text = x, srcfile = src): <text>:3:7: unexpected symbol\n2: \n3: nohup sos\n         ^\n",
      "output_type": "error",
-     "status": "error",
      "traceback": [
-      "\u001b[91mFile contains parsing errors: \n\t[line  2]: sos run ./mv_susie.ipynb mv_susie_cv --cv_times 2  \\\n--molecular_pheno_dir \"molecular_phenotype_list\"   \\\n--region_list region_list  \\\n--wd ./   \\\n--name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" \\--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE &\n\nInvalid statements: SyntaxError('invalid syntax', ('<string>', 1, 5, 'sos run ./mv_susie.ipynb mv_susie_cv --cv_times 2  \\\\\\n'))\u001b[0m"
+      "Error in parse(text = x, srcfile = src): <text>:3:7: unexpected symbol\n2: \n3: nohup sos\n         ^\nTraceback:\n"
      ]
     }
    ],
    "source": [
     "# Test the pipeline with MWE\n",
     "\n",
-    "nohup sos run ~/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb mm_prior \\\n",
-    "--molecular_pheno_dir /home/hs3163/Project/Genome_prior/data/molc_dir    \\\n",
-    "--rds_list /home/hs3163/Project/Genome_prior/data/rds_list  \\\n",
-    "--wd   /home/hs3163/Project/Genome_prior/merge \\\n",
-    "--name \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
-    "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "-J 10 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
-    "\n",
-    "\n",
-    "nohup sos run /home/hs3163/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb flash \\\n",
+    "nohup sos run /home/hs3163/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb mm_prior \\\n",
     "--molecular_pheno_dir /home/hs3163/Project/Genome_prior/data/molc_dir    \\\n",
     "--rds_list /home/hs3163/Project/Genome_prior/data/rds_list_test  \\\n",
     "--wd   /home/hs3163/Project/Genome_prior/test \\\n",
@@ -146,14 +135,7 @@
     "--container /mnt/mfs/statgen/containers/twas_latest.sif -s build &\n",
     "\n",
     "\n",
-    "nohup sos run ~/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb mm_prior \\\n",
-    "--molecular_pheno_dir /home/hs3163/Project/Genome_prior/data/molc_dir    \\\n",
-    "--rds_list /home/hs3163/Project/Genome_prior/data/rds_list  \\\n",
-    "--wd   /home/hs3163/Project/Genome_prior/merge \\\n",
-    "--name \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
-    "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "--constraint \"Both\" \\\n",
-    "-J 10 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "## Actual pipeline running.\n",
     "\n",
     "nohup sos run ~/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb mm_prior \\\n",
     "--molecular_pheno_dir /home/hs3163/Project/Genome_prior/data/molc_dir    \\\n",
@@ -161,7 +143,7 @@
     "--wd   /home/hs3163/Project/Genome_prior/merge \\\n",
     "--name \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
     "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
-    "--constraint \"No_Constraint\" \\\n",
+    "--constraint \"Both\" \\\n",
     "-J 10 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
     "\n"
    ]
@@ -676,7 +658,7 @@
     "    dat = readRDS(${_input[0]:r})\n",
     "    V = cor(dat$null.z)\n",
     "    X = dat$strong.z\n",
-    "    mash_data = mash_set_data(X = dat$strong.b, Shat=dat$strong.s, alpha=1, V=vhat, zero_Bhat_Shat_reset = 1E3)\n",
+    "    mash_data = mash_set_data(dat$strong.b, Shat=dat$strong.s, alpha=1, V=V, zero_Bhat_Shat_reset = 1E3)\n",
     "    # FLASH matrices\n",
     "    U.flash = readRDS(${_input[1]:r})\n",
     "    # SVD matrices\n",
@@ -732,9 +714,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[mm_prior_7,teem_ed_2,ed_3]\n",
+    "[mm_prior_6,ed_2]\n",
     "method = [\"ed\",\"teem\"]\n",
-    "input:  output_from('udr_ed_1'),for_each = \"method\"\n",
+    "input: for_each = \"method\"\n",
     "output: f\"{_input:n}.{_method}.UD_ED.rds\"\n",
     "task: trunk_workers = 1, walltime = '36h', trunk_size = 1, mem = '8G', cores = 14, tags = f'{_output:bn}'\n",
     "R: expand = \"${ }\", stderr = f\"{_output:n}.stderr\", stdout = f\"{_output:n}.stdout\",container = container\n",
