--- a/Workflow/wg_prior_genome.ipynb
+++ b/Workflow/wg_prior_genome.ipynb
@@ -490,7 +490,7 @@
     "           null.s = dat$null$sbhat,\n",
     "           random.s = dat$random$sbhat,\n",
     "           strong.s = dat$strong$sbhat,\n",
-    "           file = dat$file\n",
+    "           file = c(${_input:r,})\n",
     "              ),\n",
     "          ${_output:r})"
    ]
@@ -526,7 +526,7 @@
     "input: f'{wd:a}/output/{name}.rds'\n",
     "output: f'{wd:a}/output/{name}.{constraint}.flash.rds'\n",
     "\n",
-    "task: trunk_workers = 1, walltime = '2h', trunk_size = 1, mem = '4G', cores = 1, tags = f'{_output:bn}'\n",
+    "task: trunk_workers = 1, walltime = '2h', trunk_size = 1, mem = '8G', cores = 2, tags = f'{_output:bn}'\n",
     "R: expand = \"${ }\", stderr = f'{_output}.stderr', stdout = f'{_output}.stdout',container = container\n",
     "    library(flashr)\n",
     "    library(mixsqp)\n",
@@ -583,10 +583,11 @@
     "\n",
     "    ## HS, is this function consistant with the ez model? \n",
     "    cov_flash = function(data, subset = NULL, non_singleton = FALSE, save_model = NULL) {\n",
-    "      if(is.null(subset)) subset = 1:mashr:::n_effects(data)\n",
-    "      b.center = apply(data$Bhat[subset,], 2, function(x) x - mean(x))\n",
-    "      ## Only keep factors with at least two values greater than 1 / sqrt(n)\n",
-    "      find_nonunique_effects <- function(fl) {\n",
+    "    if(is.null(subset)) subset = 1:mashr:::n_effects(data)\n",
+    "    b.center = apply(data$Bhat[subset,], 2, function(x) x - mean(x))\n",
+    "    # Only keep factors with at least two values greater than 1 / sqrt(n)\n",
+    "    #b.center = data$Bhat\n",
+    "    find_nonunique_effects <- function(fl) {\n",
     "        thresh <- 1/sqrt(ncol(fl$fitted_values))\n",
     "        vals_above_avg <- colSums(fl$ldf$f > thresh)\n",
     "        nonuniq_effects <- which(vals_above_avg > 1)\n",
@@ -612,6 +613,8 @@
     "    dat = readRDS(\"${_input}\")\n",
     "    if(\"${constraint}\" == \"Both\" |\"${constraint}\" == \"No_Constraint\" ){\n",
     "    f.d = flash_set_data(as.matrix(dat$strong.z))\n",
+    "    ycenter = apply(f.d$Y, 2, function(x) x - mean(x))\n",
+    "    f.d$Y = ycenter\n",
     "    f = flash_pipeline(f.d,init_fn = \"udv_si\")\n",
     "    }              \n",
     "    if(\"${constraint}\" == \"Both\"){\n",
@@ -652,6 +655,7 @@
     "    dat = readRDS(${_input[0]:r})\n",
     "    V = cor(dat$null.z)\n",
     "    X = dat$strong.z\n",
+    "    X[is.na(X)] = 0\n",
     "    mash_data = mash_set_data(dat$strong.b, Shat=dat$strong.s, alpha=1, V=V, zero_Bhat_Shat_reset = 1E3)\n",
     "    # FLASH matrices\n",
     "    U.flash = readRDS(${_input[1]:r})\n",
@@ -674,6 +678,7 @@
     "output: f\"{_input:n}.ED.rds\"\n",
     "task: trunk_workers = 1, walltime = '36h', trunk_size = 1, mem = '8G', cores = 14, tags = f'{_output:bn}'\n",
     "R: expand = \"${ }\", stderr = f\"{_output:n}.stderr\", stdout = f\"{_output:n}.stdout\",container = container\n",
+    "    library(mashr)\n",
     "    dat = readRDS(${_input:r})\n",
     "    # Denoised data-driven matrices\n",
     "    res = mashr:::bovy_wrapper(dat$mash_data, dat$Ulist, logfile=${_output:nr}, tol = 1e-06)\n",
