--- a/Workflow/wg_prior_genome.ipynb
+++ b/Workflow/wg_prior_genome.ipynb
@@ -583,10 +583,10 @@
     "\n",
     "    ## HS, is this function consistant with the ez model? \n",
     "    cov_flash = function(data, subset = NULL, non_singleton = FALSE, save_model = NULL) {\n",
-    "    if(is.null(subset)) subset = 1:mashr:::n_effects(data)\n",
-    "    b.center = apply(data$Bhat[subset,], 2, function(x) x - mean(x))\n",
-    "    # Only keep factors with at least two values greater than 1 / sqrt(n)\n",
-    "    #b.center = data$Bhat\n",
+    "      #if(is.null(subset)) subset = 1:mashr:::n_effects(data)\n",
+    "      #b.center = apply(data$Bhat[subset,], 2, function(x) x - mean(x))\n",
+    "      ## Only keep factors with at least two values greater than 1 / sqrt(n)\n",
+    "    b.center = data$Bhat\n",
     "    find_nonunique_effects <- function(fl) {\n",
     "        thresh <- 1/sqrt(ncol(fl$fitted_values))\n",
     "        vals_above_avg <- colSums(fl$ldf$f > thresh)\n",
@@ -613,8 +613,8 @@
     "    dat = readRDS(\"${_input}\")\n",
     "    if(\"${constraint}\" == \"Both\" |\"${constraint}\" == \"No_Constraint\" ){\n",
     "    f.d = flash_set_data(as.matrix(dat$strong.z))\n",
-    "    ycenter = apply(f.d$Y, 2, function(x) x - mean(x))\n",
-    "    f.d$Y = ycenter\n",
+    "    #ycenter = apply(f.d$Y, 2, function(x) x - mean(x))\n",
+    "    #f.d$Y = ycenter\n",
     "    f = flash_pipeline(f.d,init_fn = \"udv_si\")\n",
     "    }              \n",
     "    if(\"${constraint}\" == \"Both\"){\n",
