--- a/Workflow/wg_prior_genome.ipynb
+++ b/Workflow/wg_prior_genome.ipynb
@@ -137,7 +137,7 @@
     "\n",
     "## Actual pipeline running.\n",
     "\n",
-    "nohup sos run ~/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb mm_prior \\\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb flash \\\n",
     "--molecular_pheno_dir /home/hs3163/Project/Genome_prior/data/molc_dir    \\\n",
     "--rds_list /home/hs3163/Project/Genome_prior/data/rds_list  \\\n",
     "--wd   /home/hs3163/Project/Genome_prior/merge \\\n",
@@ -145,6 +145,19 @@
     "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "--constraint \"Both\" \\\n",
     "-J 10 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
+    "\n",
+    "\n",
+    "## Actual pipeline running.\n",
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/wg_prior_genome.ipynb flash \\\n",
+    "--molecular_pheno_dir /home/hs3163/Project/Genome_prior/data/molc_dir    \\\n",
+    "--rds_list /home/hs3163/Project/Genome_prior/data/rds_list  \\\n",
+    "--wd   /home/hs3163/Project/Genome_prior/merge \\\n",
+    "--name \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "--constraint \"Both\" \\\n",
+    "-s build &\n",
+    "\n",
     "\n"
    ]
   },
