--- a/Workflow/wg_prior_genome.ipynb
+++ b/Workflow/wg_prior_genome.ipynb
@@ -292,113 +292,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "kernel": "SoS"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bash: [mv_susie_2,mv_susie_cv_2]: command not found\n",
-      "bash: input:: command not found\n",
-      "bash: output:: command not found\n",
-      "bash: f{wd:a}/result/{_input[0]:bn}.transformed_XY.RData,: No such file or directory\n",
-      "bash: f{wd:a}/result/{_input[0]:bn}.mv_wgt.txt: No such file or directory\n",
-      "bash: task:: command not found\n",
-      "bash: R:: command not found\n",
-      "bash: syntax error near unexpected token `\"dplyr\"'\n",
-      "bash: syntax error near unexpected token `\"tibble\"'\n",
-      "bash: syntax error near unexpected token `\"readr\"'\n",
-      "bash: syntax error near unexpected token `\"plink2R\"'\n",
-      "bash: syntax error near unexpected token `\"mashr\"'\n",
-      "bash: syntax error near unexpected token `\"mmbr\"'\n",
-      "bash: syntax error near unexpected token `\"flashier\"'\n",
-      "bash: syntax error near unexpected token `\"modelr\"'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `min'\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `miss'\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `geno'\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `unique'\n",
-      "bash: syntax error near unexpected token `else'\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `rm_col'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `rm_col'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `rm_col'\n",
-      "bash: syntax error near unexpected token `mean_impute'\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `miss'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `{'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `covar'\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: tmp: command not found\n",
-      "bash: syntax error near unexpected token `{'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `tmp'\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `tmp'\n",
-      "bash: syntax error near unexpected token `{'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `}'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: Y_0,: command not found\n",
-      "bash: residual_variance: command not found\n",
-      "bash: syntax error near unexpected token `)'\n",
-      "bash: syntax error near unexpected token `0,ncol'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: m_0: command not found\n",
-      "bash: syntax error near unexpected token `m_$[_regions[0]],file'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "bash: syntax error near unexpected token `scaled_$[_regions[0]],file'\n",
-      "bash: syntax error near unexpected token `('\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "[mm_prior_2,extract_1]\n",
     "\n",
@@ -510,18 +408,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in parse(text = x, srcfile = src): <text>:2:1: unexpected '['\n1: # Perform FLASH analysis (time estimate: 20min)\n2: [\n   ^\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in parse(text = x, srcfile = src): <text>:2:1: unexpected '['\n1: # Perform FLASH analysis (time estimate: 20min)\n2: [\n   ^\nTraceback:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -636,6 +525,7 @@
     "    res = c(res,mashr:::cov_from_factors(t(as.matrix(f$ldf$f)), \"FLASH_NC\"),\n",
     "                list(\"tFLASH_NC\" = t(f$fitted_values) %*% f$fitted_values / nrow(f$fitted_values)))                                                     \n",
     "    }else if ( \"${constraint}\" == \"Constraint\" ){\n",
+    "    dat = mash_set_data(dat$strong.b, dat$strong.s, alpha= 1, zero_Bhat_Shat_reset = 1E3)\n",
     "    res = cov_flash(dat, non_singleton = TRUE, save_model = \"${_output}.model.rds\")\n",
     "    }else{\n",
     "    res = c(mashr:::cov_from_factors(t(as.matrix(f$ldf$f)), \"FLASH_NC\"),\n",
