--- a/Analysis/ROSMAP_TWAS/Whole Genome TWAS(Fusion + MV_susie).ipynb
+++ b/Analysis/ROSMAP_TWAS/Whole Genome TWAS(Fusion + MV_susie).ipynb
@@ -70,7 +70,7 @@
     "  --model bslmm blup lasso top1 enet \\\n",
     "  --job_size 1\\\n",
     "  --asso_mem \"6G\" \\\n",
-    "  -J 40 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &"
+    "  -J 200 -q csg -c /home/hs3163/GIT/neuro-twas/template/csg.yml -s build &"
    ]
   },
   {
@@ -123,10 +123,10 @@
     "--container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE  --job_size 1 \\\n",
     "--cv_times 100  \\\n",
     "--mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds'\\\n",
-    "-J 200 -q csg -c /home/hs3163/Project/mwe/mv_susie_mwe/csg.yml -s build &\n",
+    "-J 6 -q csg -c /mnt/mfs/statgen/pbs_template/csg.yml -s build &\n",
     "\n",
     "\n",
-    "/home/hs3163/Project/mwe/mv_susie_mwe/csg.yml\n",
+    "/home/hs3163/Project/\n",
     "\n",
     "\n"
    ]
