--- a/Analysis/ROSMAP_TWAS/Whole Genome TWAS(Fusion + MV_susie).ipynb
+++ b/Analysis/ROSMAP_TWAS/Whole Genome TWAS(Fusion + MV_susie).ipynb
@@ -139,6 +139,20 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -151,7 +165,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie_cv --molecular_pheno_dir \"/home/hs3163/Project/Alz_WG/mv_wg/molecular_phenotype_list\" --region_list \"/home/hs3163/Project/Alz_WG/mv_wg/wg_rds_list\" --wd \"/home/hs3163/Project/Alz_WG/mv_wg\" --name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" --container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE --job_size 1 --cv_times 100 --mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds' -J 200 -q csg -c ./csg.yml -s build &"
+    "sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb fusion_tf_cv --molecular_pheno_dir mole_pheno_ls   --region_list cand_rgs.txt  --wd ./   --name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" --container gaow/twas --impute TRUE --cv_times 2  &\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "nohup sos run ~/GIT/neuro-twas/Workflow/mv_susie.ipynb mv_susie_cv --molecular_pheno_dir \"/home/hs3163/Project/Alz_WG/mv_wg/molecular_phenotype_list\" --region_list \"/home/hs3163/Project/Alz_WG/mv_wg/wg_rds_list\" --wd \"/home/hs3163/Project/Alz_WG/mv_wg\" --name_prefix \"geneTpmResidualsAgeGenderAdj_rename\" --container /mnt/mfs/statgen/containers/twas_latest.sif --impute TRUE --job_size 1 --cv_times 100 --mixture_prior '~/Project/Genome_prior/merge/output/geneTpmResidualsAgeGenderAdj_rename.Both.flash.FL_PC3.teem.UD_ED.rds' -J 200 -q csg -c ./csg.yml -s build &"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TWAS for MV susie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sos run twas_fusion.ipynb association_test \\\n",
+    "  --gwas_sumstat  \\\n",
+    "  --molecular-pheno ./gene_exp_file.txt \\\n",
+    "  --wd ./ \\\n",
+    "  --genotype_list ./genptype_file_LDREF \\\n",
+    "  --region_list /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/data/region_list.txt \\\n",
+    "  --region_name 1 \\\n",
+    "  --data_start 5 \\\n",
+    "  --output_path /Users/haosun/Documents/WG_Reasearch_Assisstant/Fusion/Project/Updated/At_output \\\n",
+    "  --window 500000 \\\n",
+    "  --model blup lasso top1 enet \\\n",
+    "  --container gaow/twas"
    ]
   }
  ],
